test/scc/expr/semantic-errors/162.a
162.t:8:8: error: braces around scalar initializer